Record select from list to edit mode and then record can be updated

--- a/jQueryAjaxInAsp.NETMVC/jQueryAjaxInAspNETMVC.csproj
+++ b/jQueryAjaxInAsp.NETMVC/jQueryAjaxInAspNETMVC.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="GlobalClass.cs" />
     <Compile Include="Models\DBModels.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -193,6 +194,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\notify.min.js" />
     <Content Include="Scripts\SiteScript.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
